[project]
name = "hyperhex_theme"
version = "1.0.0"
description = "HyperHex Solutions — Industrial Dark Theme for ERPNext v15"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://hyperhexsolutions.com"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
